src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Last_Call_Attempt_Status_Details__c</fullName>
        <label>Last Call Attempt Status Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Call_Rating__c</fullName>
        <label>Last Call Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Presales_Task_Id__c</fullName>
        <label>Latest Presales Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_call_attempt_status__c</fullName>
        <label>Last Call Attempt Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_call_attempted_by__c</fullName>
        <label>Last Call Attempted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_call_description__c</fullName>
        <label>Last Call Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LatestDuplicates__c</fullName>
        <label>Latest Duplicates</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Call_Attempted_By__c</fullName>
        <label>Latest Call Attempted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Next_Action_Date__c</fullName>
        <label>Latest Next Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_PMT_Comments__c</fullName>
        <label>Latest PMT Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_SM_Comments__c</fullName>
        <label>Latest SM Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Task_Comments__c</fullName>
        <label>Latest Task Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Task_Due_Date__c</fullName>
        <label>Latest Task Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Task_Id__c</fullName>
        <label>Latest Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Ageing__c</fullName>
        <formula>Today() -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Ageing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Information__c</fullName>
        <formula>IF(LastName != null, (5/(100*5)), 0) +
IF(TEXT(Status) != null, (5/(100*5)), 0) +
IF(TEXT(LeadSource) != null, (5/(100*5)), 0) +
IF(MobilePhone != null, (5/(100*5)), 0) +
IF(Email != null, (5/(100*5)), 0)
+
IF(FirstName != null, (15/(100*11)), 0) +
IF(Company != null, (15/(100*11)), 0) +
IF(Title != null, (15/(100*11)), 0) +
IF(Phone != null, (15/(100*11)), 0) +
IF(Country != null, (15/(100*11)), 0) +
IF(TEXT(RDS_Country_Code__c) != null, (15/(100*11)), 0) +
IF(TEXT(Transaction_Type__c) != null, (15/(100*11)), 0) +
IF(TEXT(Rating) != null, (15/(100*11)), 0) +
IF(RDS_Project__c != null, (15/(100*11)), 0) +
IF(Exp_Closure_Month__c != null, (15/(100*11)), 0)</formula>
        <label>Lead Information</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lead_Modified_Ageing__c</fullName>
        <label>Lead Modified Ageing</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Profile__c</fullName>
        <label>Lead Owner Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_For_Conversion__c</fullName>
        <label>Lead Source at Conversion</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Sub_Source__c</fullName>
        <label>Lead Sub Source</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>99 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magic Bricks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Different Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Times of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sakal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra Times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lokmat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loksatta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Mirchi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fever 104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akurdi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alandi Devachi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alandi Khed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alandi Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambegaon BK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anandnagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armament</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aundh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aundh Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balaji Nagar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Contact_Number__c</fullName>
        <label>Local Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Locality_R__c</fullName>
        <label>Locality(R)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LocationO__c</fullName>
        <label>Zone(O)</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Zone(R)</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marital_Family_Status__c</fullName>
        <label>Marital/ Family Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmarried</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MasterRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MasterRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_of_Refree__c</fullName>
        <label>Mobile of Refree</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Motivation_to_Buy_Invest__c</fullName>
        <label>Motivation to Buy/Invest</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Ref1__c</fullName>
        <label>Name Ref1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Ref2__c</fullName>
        <label>Name Ref2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Refree__c</fullName>
        <label>Name of Refree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_TL__c</fullName>
        <label>Sourcing TL</label>
        <picklist>
            <picklistValues>
                <fullName>Vaibhav Andhare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Mantri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ravi Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prashant Kalal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Mishra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivek Pathak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaustabh Dutta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kunal Takle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Namonarayan Shirothiya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaurav B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abhishek Mishra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atul Chordia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vickrant Agarwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shailesh Khandelwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jagrat Ranka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parkeen Shah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keyur Pandey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal Bafna</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Channel_Partner_Email__c</fullName>
        <label>New Channel Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Channel_Partner_Name__c</fullName>
        <label>New Channel Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Channel_Partner_Phone__c</fullName>
        <label>New Channel Partner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Newspaper_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Source Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Of_Properties__c</fullName>
        <label>No Of Properties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housewife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Billing_Mailing_Address__c</fullName>
        <label>Billing/Mailing Address (O)</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_City__c</fullName>
        <label>City (O)</label>
        <picklist>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Blair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amalapuram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anakapalle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bapatla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bheemunipatnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhimavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bobbili</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chilakaluripet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chirala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chittoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuddapah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharmavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eluru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gooty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gudivada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gudur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntakal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hanamkonda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindupur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaggaiahpet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammalamadugu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadapa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadiri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kakinada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kandukur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kavali</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Country__c</fullName>
        <label>Country (O)</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_State_Province__c</fullName>
        <label>State/Province (O)</label>
        <picklist>
            <picklistValues>
                <fullName>Andaman and Nicobar Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra and Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu &amp; kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odisha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puducherry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil Nadu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamilnadu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Street__c</fullName>
        <label>Address 1 and 2 (O)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Office_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code (O)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others_Remarks__c</fullName>
        <label>Others Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <label>Others</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outstation_Location__c</fullName>
        <label>Outstation Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Possession_Requirement__c</fullName>
        <label>Possession Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Ready to Move in (RTMI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Live In (RTLI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Construction (UC – 1 to 2 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Construction (UC – 2 to 3 years)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Construction (UC – More than 3 years)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Presales_Call_counter__c</fullName>
        <label>Presales Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <description>Lead&apos;s previous owner&apos;s Name.</description>
        <label>Previous Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Number__c</fullName>
        <label>Primary Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Professional_Association__c</fullName>
        <label>Professional Association</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Subtype__c</fullName>
        <label>Unit Configuration</label>
        <picklist>
            <controllingField>Project_Type__c</controllingField>
            <picklistValues>
                <fullName>1 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 BHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Showroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Apartment</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projects_Interested__c</fullName>
        <label>Projects Interested</label>
        <picklist>
            <picklistValues>
                <fullName>Avalon City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solitaire Business Hub Wakad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solitaire Business Hub Baner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Tower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solitaire World – World One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mudra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solitaire Business Hub Yerwada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solitaire Business Hub - Bibvewadi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solitaire Nine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solitaire Seven</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLITAIRE WORLD - WORLD 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solitaire Pashan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Site_Visit__c</fullName>
        <formula>IF(Date_of_visit__c != null, (40/2), 0) +
IF(TEXT(Repeat_Visit__c) != null, (40/2), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Site Visit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>End Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Gain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualification_Parameter__c</fullName>
        <formula>IF(TEXT(RDS_Budget__c) != null, (10/9), 0) +
IF(TEXT(RND_Timeline__c) != null, (10/9), 0) +
IF(TEXT(Requirment__c) != null, (10/9), 0) +
IF(TEXT(Area__c) != null, (10/9), 0) +
IF(TEXT(RDS_Location__c) != null, (10/9), 0) +
IF(TEXT(RDS_Intention__c) != null, (10/9), 0) +
IF(TEXT(RDS_Unit_type_configuration__c) != null, (10/9), 0) +
IF(TEXT(Purpose__c) != null, (10/9), 0) +
IF(TEXT(Possession_Requirement__c) != null, (10/9), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Parameter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RDS_Alternate_Email_Id__c</fullName>
        <label>Alternate Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RDS_Alternate_Mobile_No__c</fullName>
        <label>Alternate Mobile No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RDS_Assignment__c</fullName>
        <label>Assignment</label>
        <picklist>
            <picklistValues>
                <fullName>Project Wise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Details Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>